--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,32 +1,60 @@
 <resources>
-    <string name="app_name">Where are you?</string>
 
+    <string name="app_name">Where are you?</string>
     <string name="label_contacts">Contacts</string>
     <string name="label_map">Map</string>
     <string name="label_History">History</string>
     <string name="label_from">You</string>
+    <string name="label_about_application">About</string>
+    <string name="label_fake_location">Fake location</string>
+    <string name="title_activity_contact">Contact details</string>
+    <string name="button_set">Set</string>
+    <string name="button_cancel">Cancel</string>
+    <string name="history_no_coordinates">There are no coordinates to show..</string>
+    <string name="device_locationreq_not_allowed">You are not in contact list of the person. Getting the Users Location is impossible</string>
+    <string name="contactActivity_locationNotAllowed">You are not in contact list of the person. Getting the Users Location is impossible</string>
+    <string name="contactActivity_contactWillBeDeleted">The contact will be deleted from list..</string>
+    <string name="contactActivity_noLocationHistory">There is now contact location to show. Use \'get location\'</string>
+    <string name="title_activity_maps">Map</string>
+    <string name="title_activity_about">AboutActivity</string>
+    <string name="title_activity_fake_location">Fake location</string>
+
+    <string name="contact_button_getLocation">Get location</string>
+    <string name="contact_button_deleteFromContacts">Delete from contacts</string>
+    <string name="contact_button_showLastLocationOnMap">Show last location</string>
+
+    <string name="no_internet_connection">INTERNET CONNECTION FAILED</string>
+
+    <string name="fake_Location_switch_label">Using status</string>
+    <string name="fake_Location_button_activate_label">ACTIVATE</string>
+    <string name="fake_Location_status_InActive">NOT ACTIVATED</string>
+    <string name="fake_Location_status_Active">ACTIVATED</string>
+    <string name="fake_Location_description1">What\'s this?</string>
+    <string name="fake_Location_description2">This function allows to choose any point on a map. This location will be send to requesting contact</string>
+    <string name="fake_Location_description3">Fake location. One year subscription</string>
+    <string name="fake_Location_purchasing_error">Error purchasing. Try again</string>
+    <string name="label_contact_name_isNull">Contact phone undefined. Adding cancelled</string>
+
+
+
+
+    <string name="label_cancel">CANCEL</string>
+    <string name="label_OK">OK</string>
+    <string name="label_contactdelete_confirmation">Delete confirmation</string>
+    <string name="label_contactdelete_content">The contact will be deleted. Requests history wii be in safe\n\nDelete anyway?</string>
+    <string name="label_getting_location">Getting location...</string>
 
 
 
 
 
+    <!--
+       <string name="hello_world">Hello world!</string>
+       <string name="action_settings">Settings</string>
 
+       <string name="label_contactName">Unknown name</string>
 
-
-
-
-
-
-
-
-
-
-
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
-    <string name="label_contactName">Unknown name</string>
     <string name="button_getCurrentPosition_label"> \?</string>
-<!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="requestTimeLabel">request time</string>
     <string name="requestedTime">17:00 23/12</string>
@@ -34,6 +62,7 @@
     <string name="longitudeLabel">long:</string>
     <string name="history_test_latitude">50.1231</string>
     <string name="history_test_longitude">30.1233</string>
+    -->
 
 
 </resources>
